tudoonline-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tudoonline-app
  namespace: production
  labels:
    app: tudoonline-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: tudoonline-app
